made the UI for the board and the hits for the enemy board

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <button id="start_btn">Start</button>
       </div>
       <div id="main" class="hidden">
-        <div id="status"><p>Your Turn</p></div>
+        <div id="status"><p id="status_message">Your Turn</p></div>
         <div id="boards">
           <div id="user">
             <p id="user_name"></p>
