added functionality for user_board_overlay

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,10 @@
         <div id="boards">
           <div id="user">
             <p id="user_name"></p>
-            <div id="user_board" class="board"></div>
+            <div id="user_board_container">
+              <div id="user_board" class="board"></div>
+              <div id="user_board_overlay" class="board"></div>
+            </div>
           </div>
           <div id="cpu">
             <p>Enemy's board</p>
