--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,47 @@
   </head>
   <body>
     <div id="header">
-      <p>Battleship Game</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <title>ferry</title>
-        <path
-          d="M6,6H18V9.96L12,8L6,9.96M3.94,19H4C5.6,19 7,18.12 8,17C9,18.12 10.4,19 12,19C13.6,19 15,18.12 16,17C17,18.12 18.4,19 20,19H20.05L21.95,12.31C22.03,12.06 22,11.78 21.89,11.54C21.76,11.3 21.55,11.12 21.29,11.04L20,10.62V6C20,4.89 19.1,4 18,4H15V1H9V4H6A2,2 0 0,0 4,6V10.62L2.71,11.04C2.45,11.12 2.24,11.3 2.11,11.54C2,11.78 1.97,12.06 2.05,12.31M20,21C18.61,21 17.22,20.53 16,19.67C13.56,21.38 10.44,21.38 8,19.67C6.78,20.53 5.39,21 4,21H2V23H4C5.37,23 6.74,22.65 8,22C10.5,23.3 13.5,23.3 16,22C17.26,22.65 18.62,23 20,23H22V21H20Z"
-        />
-      </svg>
+      <p class="animate-text">Battleship</p>
+      <button id="info_modal_icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <title>help-circle</title>
+          <path
+            d="M15.07,11.25L14.17,12.17C13.45,12.89 13,13.5 13,15H11V14.5C11,13.39 11.45,12.39 12.17,11.67L13.41,10.41C13.78,10.05 14,9.55 14,9C14,7.89 13.1,7 12,7A2,2 0 0,0 10,9H8A4,4 0 0,1 12,5A4,4 0 0,1 16,9C16,9.88 15.64,10.67 15.07,11.25M13,19H11V17H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
+          />
+        </svg>
+      </button>
+      <div id="header_svg">
+        <svg
+          id="Layer_1"
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 194.76 157.84"
+        >
+          <path
+            d="M2.62,134.53c.75-.06,1.51-.16,2.26-.16h192.5c-.23,7.43,1,14.67-3.69,21.48-10.06,14.68-23.6,22.87-41.4,23-41.26.22-82.53.08-123.8,0a7.11,7.11,0,0,1-3.06-.77c-7-3.46-14-7-21.07-10.5-.56-.28-1.16-.47-1.74-.71v-8c.76,0,1.52,0,2.28,0H80V147.42H44l-41.42,0Zm105.88,24.2h11.22V147.58H108.5Zm45.93-.26h11.16V147.3H154.43Zm-11.75-11.28c-3.59,0-6.93,0-10.28,0a1.3,1.3,0,0,0-1,.82c-.06,3.45,0,6.91,0,10.43h11.27Z"
+            transform="translate(-2.62 -21.08)"
+          />
+          <path
+            d="M75.3,67.23V55.79H88.42V44.27H82V32.81h6.55V21.08H100V32.77h6.47V44.11h-6.33V55.66h13.09V67.09H100.14V79.9h13.15v24.37h11v18.56H50.49c0-3.85,0-7.63,0-11.41,0-.39.6-.91,1-1.13,3.66-1.87,7.34-3.72,11.05-5.49a6.47,6.47,0,0,1,2.56-.47c3,0,6,0,9.27,0V80h14V67.23Z"
+            transform="translate(-2.62 -21.08)"
+          />
+          <path
+            d="M167.34,115.78v7H139.48c1.14-2.31,2.19-4.45,3.25-6.57,1.75-3.51,3.48-7,5.32-10.5a2.56,2.56,0,0,1,1.74-1.29c11.6-.07,23.21,0,34.81,0a2.19,2.19,0,0,1,.48.13v11.21Z"
+            transform="translate(-2.62 -21.08)"
+          />
+          <path
+            d="M39.07,122.81H14.64c.19-3.14.21-6.27.63-9.35a2.78,2.78,0,0,0-.86-2.77c-3.36-3.25-6.66-6.56-9.83-9.69l8.14-8.15c2.84,2.85,6,5.91,9,9.12a6.9,6.9,0,0,0,5.66,2.49,11.7,11.7,0,0,1,11.64,12C39.07,118.52,39.07,120.6,39.07,122.81Z"
+            transform="translate(-2.62 -21.08)"
+          />
+          <defs>
+            <linearGradient id="myGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+              <stop offset="0%" stop-color="var(--primary)" />
+              <stop offset="50%" stop-color="var(--accent)" />
+              <stop offset="100%" stop-color="var(--text)" />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
     </div>
     <div id="content">
       <div id="intro">
@@ -28,7 +62,7 @@
         <button id="start_btn">Start</button>
       </div>
       <div id="main" class="hidden">
-        <div id="status">
+        <div id="status_container">
           <button id="randomize_btn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <title>dice-multiple</title>
@@ -37,7 +71,9 @@
               />
             </svg>
           </button>
-          <p id="status_message">Your Turn</p>
+          <div id="status">
+            <p id="status_message">Awaiting orders...</p>
+          </div>
           <button id="begin_game">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <title>play-box</title>
@@ -64,20 +100,104 @@
     </div>
 
     <div id="footer">
-      <a href="https://github.com/Ioannis-Bfg" target="”_blank”">
+      <a href="https://github.com/Ioannis-Bfg" target="_blank">
         <p>Made by Ioannis-Bfg</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <title>github</title>
-          <path
-            d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
-          /></svg
-      ></a>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 25 25"
+          id="fancy_svg"
+        >
+          <mask id="mask" x="0" y="0" width="100%" height="100%">
+            <path
+              d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
+              fill="white"
+            />
+          </mask>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50 50"
+            id="moving_svg"
+            mask="url(#mask)"
+          >
+            <defs>
+              <linearGradient
+                id="a"
+                gradientUnits="objectBoundingBox"
+                x1="0"
+                y1="0"
+                x2="1"
+                y2="1"
+              >
+                <stop offset="0" stop-color="white" />
+                <!-- White -->
+                <stop offset=".5" stop-color="#0066ff" />
+                <!-- Green -->
+                <stop offset="1" stop-color="#0066ff" />
+                <!-- Blue -->
+                <animateTransform
+                  attributeName="gradientTransform"
+                  type="rotate"
+                  from="0 .5 .5"
+                  to="360 .5 .5"
+                  dur="20s"
+                  repeatCount="indefinite"
+                />
+              </linearGradient>
+              <linearGradient
+                id="b"
+                gradientUnits="objectBoundingBox"
+                x1="0"
+                y1="1"
+                x2="1"
+                y2="1"
+              >
+                <stop offset="0" stop-color="white" />
+                <!-- White -->
+                <stop offset="1" stop-color="#66ff66" stop-opacity="0" />
+                <!-- Transparent -->
+                <animateTransform
+                  attributeName="gradientTransform"
+                  type="rotate"
+                  values="360 .5 .5;0 .5 .5"
+                  class="ignore"
+                  dur="10s"
+                  repeatCount="indefinite"
+                />
+              </linearGradient>
+            </defs>
+            <rect fill="url(#a)" width="100%" height="100%" />
+            <rect fill="url(#b)" width="100%" height="100%" />
+          </svg>
+        </svg>
+      </a>
     </div>
     <div id="myModal" class="modal">
       <div class="modal-content">
         <div id="modal-content-info">
           <p id="winnerMessage">Virginia won</p>
           <button id="okButton">OK</button>
+        </div>
+      </div>
+    </div>
+    <div id="info_modal" class="modal">
+      <div class="info_modal-content">
+        <span class="close">&times;</span>
+        <div id="info_modal-content-info">
+          <p>RULES</p>
+          <ul>
+            <li>The game is played on two grids, one for each player.</li>
+            <li>Each player has a fleet of ships to place on their grid.</li>
+            <li>
+              Players take turns calling out a grid reference to attack their
+              opponent's ships.
+            </li>
+            <li>If a ship is hit, it is marked on the grid.</li>
+            <li>
+              The game continues until all of one player's ships are sunk.
+            </li>
+          </ul>
         </div>
       </div>
     </div>
