Initial dist subtree commit

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
           />
         </svg>
       </button>
+      <div class="toggle-container">
+        <label for="mode-toggle">Dark/Light mode</label>
+        <input type="checkbox" id="mode-toggle" class="toggle-input" />
+        <label for="mode-toggle" class="toggle-label"></label>
+      </div>
+
       <div id="header_svg">
         <svg
           id="Layer_1"
