Initial dist subtree commit

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div id="cpu">
-            <p>Enemy's board</p>
+            <p>Enemy's Board</p>
             <div id="cpu_board" class="board blocked"></div>
           </div>
         </div>
